# demo

./: .gitignore  README.md  colab_notebook.ipynb  main.py  pyproject.toml  run.py  run_multi_model.py  run_traffic_inference.py  test_inference.py  test_traffic_inference.py  test_train.py  train.py
src/: __init__.py  config.py  dataset.py  inference.py  inference_multi_model.py  model_adapters.py  prompts.py  traffic_inference.py  traffic_prompts.py  train.py  train_config.py  train_dataset.py  video_processor.py
src/internlvideo2_5_chat_8B/: README.md  inference.py  run_inference.py
src/internvideo2_5_chat_8B/: README.md  inference.py  test_inference.py
src/internvl3_5_4B/: README.md  inference.py  run_inference.py  test_inference.py
src/internvl3_5_8B/: README.md  inference.py  run_inference.py  test_inference.py
src/internvl3_8B/: evaluate.py  inference.py  run_inference.py  test_inference.py  test_train.py  train.py  train_config.py  train_dataset.py
